--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -8,37 +8,33 @@
           <h1>
             <a href="https://voc.iudx.org.in/">IUDX | VOC </a>
           </h1>
-        </div>
-        <div id="cse-search-form" style="width: 400px;">
-          <div
-            class="gcse-searchbox-only"
-            data-resultsUrl="docs/search_results.html"
-          ></div>
+          <app-search></app-search>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div id="selectionbar">
-  <div class="wrapper">
-    <ul>
-      <li>
-        <a href="#">Documentation</a>
-      </li>
+  <div id="selectionbar">
+    <div class="wrapper">
+      <ul>
 
-      <li>
-        <a routerLink="/property">Property</a>
-      </li>
+        <li>
+          <a href="#">Documentation</a>
+        </li>
 
-      <li>
-        <a routerLink="/classes">Classes</a>
-      </li>
-      <li>
-        <a href="./">Home</a>
-      </li>
-    </ul>
+        <li>
+          <a routerLink="/property">Property</a>
+        </li>
+
+        <li>
+          <a routerLink="/classes">Classes</a>
+        </li>
+
+        <li>
+          <a href="./">Home</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
-<!-- </header> -->
-<!-- ***** Header Area End ***** -->
+  <!-- </header> -->
+  <!-- ***** Header Area End ***** -->
