--- a/ui/src/app/search/search.component.html
+++ b/ui/src/app/search/search.component.html
@@ -3,7 +3,7 @@
   <div>
     <div *ngFor="let res of searchRes | async"
          (click)="gotoTerm(res)" class="search-result" >
-         {{res}}
+         {{res.label}}
     </div>
   </div>
 </div>
