--- a/ui/src/app/classes/classes.component.html
+++ b/ui/src/app/classes/classes.component.html
@@ -1,4 +1,4 @@
-<section id="schema_class_section" class="container section">
+<section id="schema_class_section" class="container">
   <div id="mainContent">
     <table id="schema_section" class="definition-table">
       <thead>
