--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,44 +1,67 @@
-<!-- ***** Header Area Start ***** -->
-<!-- <header> -->
 <div id="container">
   <div id="intro">
-    <div id="pageHeader">
-      <div class="wrapper">
-        <div id="sitename">
-          <h1>
-            <a href="https://voc.iudx.org.in/">IUDX | VOC </a>
-          </h1>
-        </div>
-        <div id="cse-search-form" style="width: 400px;">
-          <div
-            class="gcse-searchbox-only"
-            data-resultsUrl="docs/search_results.html"
-          ></div>
-        </div>
+    <nav
+      id="nav-style"
+      class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
+    >
+      <img
+        style="padding-right:10px;"
+        class="img-style"
+        src="../../assets/iudx_logo.jpeg"
+      />
+
+      <a class="navbar-brand" href="#">Vocabulary</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarsExampleDefault"
+        aria-controls="navbarsExampleDefault"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Data Models</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="dropdown01"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              >Base Schemas</a
+            >
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" routerLink="/classes">Classes</a>
+              <a class="dropdown-item" routerLink="/property">Properties</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="text"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
       </div>
-    </div>
+    </nav>
   </div>
 </div>
-
-<div id="selectionbar">
-  <div class="wrapper">
-    <ul>
-      <li>
-        <a href="#">Documentation</a>
-      </li>
-
-      <li>
-        <a routerLink="/property">Property</a>
-      </li>
-
-      <li>
-        <a routerLink="/classes">Classes</a>
-      </li>
-      <li>
-        <a href="./">Home</a>
-      </li>
-    </ul>
-  </div>
-</div>
-<!-- </header> -->
-<!-- ***** Header Area End ***** -->
