--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,4 +1,23 @@
-<section id="home-section" class="container section">
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="display-3">IUDX Vocabulary</h1>
+    <p>
+      voc.iudx.org.in is a collaborative vocabulary set detailing schemas for
+      structured data exchanges and IUDX APIs.
+    </p>
+    <p>
+      voc.iudx.org.in vocabulary is essentially based on JSON-LD markup and
+      intended to be used with IUDX APIs and data exchange.
+    </p>
+    <p>
+      This allows intelligent applications and data consumers to understand
+      semantic meaning of attributes and entities entailing the IUDX
+      specification.
+    </p>
+  </div>
+</div>
+
+<!-- <section id="home-section" class="container section">
   <div id="mainContent">
     <h1>IUDX Vocabulary</h1>
 
@@ -18,13 +37,13 @@
       specification.
     </p>
 
-    <p>
-      <!-- We invite you to <a href="docs/gs.html">get started</a>! -->
-    </p>
-    <p>
-      <!-- View our blog at <a href="http://blog.schema.org">blog.schema.org</a> or see <a href="/docs/releases.html">release history</a> for version 7.01. -->
-    </p>
+    <p> -->
+<!-- We invite you to <a href="docs/gs.html">get started</a>! -->
+<!-- </p>
+    <p> -->
+<!-- View our blog at <a href="http://blog.schema.org">blog.schema.org</a> or see <a href="/docs/releases.html">release history</a> for version 7.01. -->
+<!-- </p>
 
     <br />
   </div>
-</section>
+</section> -->
