--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <img
         style="padding-right:10px;"
         class="img-style"
-        src="../../assets/iudx_logo.jpeg"
+        src="../../assets/iudx_logo.png"
       />
 
       <a class="navbar-brand" href="#">Vocabulary</a>
@@ -25,11 +25,6 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Data Models</a>
           </li>
@@ -44,7 +39,11 @@
               aria-expanded="false"
               >Base Schemas</a
             >
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
+            <div
+              id="menu-style"
+              class="dropdown-menu"
+              aria-labelledby="dropdown01"
+            >
               <a class="dropdown-item" routerLink="/classes">Classes</a>
               <a class="dropdown-item" routerLink="/property">Properties</a>
             </div>
