Updated IUDX logo, Added functionality for class-detail,updated CSS,updated base Url

--- a/ui/src/app/class-detail/class-detail.component.html
+++ b/ui/src/app/class-detail/class-detail.component.html
@@ -1,1 +1,22 @@
-<p>class-detail works!</p>
+<section id="schema_class_section" class="container">
+  <div id="mainContent">
+    <h1></h1>
+    <table id="" class="definition-table">
+      <thead>
+        <tr>
+          <th>Property</th>
+          <th>Expected Type</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+
+      <tbody id="classSchema">
+        <tr>
+          <th></th>
+          <td></td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
