--- a/ui/src/app/classes/classes.component.html
+++ b/ui/src/app/classes/classes.component.html
@@ -9,12 +9,35 @@
         </tr>
       </thead>
       <tbody id="classSchema">
-        <tr *ngFor="let class of classes | async">
-          <th>{{ class.label }}</th>
+        <tr
+          *ngFor="let class of classes | async"
+          (click)="showClassDetail(class)"
+        >
+          <th>
+            <a [routerLink]="['/classes', class.label]">{{ class.label }}</a>
+            <!-- {{ class.label }} -->
+          </th>
           <td></td>
           <td>{{ class.comment }}</td>
         </tr>
       </tbody>
     </table>
+
+    <!-- <table id="" class="definition-table">
+      <thead>
+        <tr>
+          <th>Property</th>
+          <th>Expected Type</th>
+          <th>Description</th>
+        </tr>
+      </thead> -->
+    <!-- <tbody id="classSchema">
+        <tr *ngFor="let class of graph">
+          <th>{{ class.id }}</th>
+          <td></td>
+          <td>{{ class.type }}</td>
+        </tr>
+      </tbody> -->
+    <!-- </table> -->
   </div>
 </section>
