--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -10,7 +10,7 @@
         src="../../assets/iudx_logo.png"
       />
 
-      <a class="navbar-brand" href="#">Vocabulary</a>
+      <a class="navbar-brand" routerLink="/">Vocabulary</a>
       <button
         class="navbar-toggler"
         type="button"
