Added PropertyDetailComponent, added activatedRoute, Updated html for class-detail & property-detail

--- a/ui/src/app/class-detail/class-detail.component.html
+++ b/ui/src/app/class-detail/class-detail.component.html
@@ -1,6 +1,6 @@
 <section id="schema_class_section" class="container">
   <div id="mainContent">
-    <h1></h1>
+    <h1>{{ name }}</h1>
     <table id="" class="definition-table">
       <thead>
         <tr>
