Updated rxjs view for class details. Search bar working

--- a/ui/src/app/header/header.component.css
+++ b/ui/src/app/header/header.component.css
@@ -60,3 +60,15 @@ a:hover {
   background-color: black !important;
   padding: 10px 40px !important;
 }
+
+.form-control { width: 300px; }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
