updated table design, updated header, updated css

--- a/ui/src/app/classes/classes.component.css
+++ b/ui/src/app/classes/classes.component.css
@@ -15,3 +15,9 @@ a:hover {
   background-color: transparent;
   text-decoration: none;
 }
+table thead {
+  background-color: #c7cbce;
+}
+.table {
+  width: 115%;
+}
