--- a/ui/src/app/home/home.component.html
+++ b/ui/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <div class="container">
+  <div class="container content-style">
     <h1 class="display-3">IUDX Vocabulary</h1>
     <p>
       voc.iudx.org.in is a collaborative vocabulary set detailing schemas for
@@ -47,4 +47,5 @@
     <br />
   </div>
 </section> -->
+<hr />
 <app-footer></app-footer>
