--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -55,6 +55,7 @@ h4 {
 }
 p {
   margin: 1em 0 0 0 !important;
+  font-size: 18px;
 }
 pre {
   font-family: Courier, monospace;
@@ -70,101 +71,22 @@ pre {
 /* -------------------------------------------------
                   Page Section
   --------------------------------------------------*/
-/* #container {
-  width: 100%;
-  text-align: left;
-  margin: 0;
-  background: #fff;
-} */
-/* #intro {
-  position: relative;
-} */
-#mainContent,
-#mainContent1,
-#mainContent2 {
+
+#mainContent {
   border-bottom: solid 1px #cccccc;
   text-align: left;
 }
 #footer {
   text-align: center;
-  /* font-size: x-large; */
   font-size: 15px;
 }
 #mainContent,
-#mainContent1,
-#mainContent2,
 #footer,
 .wrapper {
   margin: 0 auto !important;
   padding: 0 0.5em;
 }
 
-#sitename {
-  max-width: 500px;
-  min-width: auto;
-  display: inline-block;
-  text-shadow: 0 2px 0 #0d1f50;
-  padding: 0;
-  top: 25px;
-  left: -40px;
-}
-
-/* -------------------------------------------------
-                  NavBar
-  --------------------------------------------------*/
-/* #selectionbar {
-  color: #fff;
-  height: 46px;
-  background: #12064b;
-  font-size: 90%;
-  height: 5.5vh;
-}
-#selectionbar ul {
-  float: right;
-  padding: 10px 0;
-  margin: 0 auto;
-  display: block;
-}
-#selectionbar li {
-  display: inline;
-  list-style: none;
-}
-#list-style a:link,
-#list-style a:visited {
-  color: #fff;
-  display: block;
-  float: right;
-  padding: 1px 9px 3px 6px;
-  margin: 0 6px;
-  text-decoration: none;
-}
-#list-style a:hover {
-  color: #ffee99;
-  background-color: transparent;
-}
-#selectionbar .activelink a {
-  background: #005c99;
-}
-#selectionbar .activelink a:hover {
-  color: #fff;
-  background-color: #005c99;
-  cursor: default;
-}
-#item-style a:link,
-#item-style a:visited {
-  color: maroon;
-  display: block;
-  float: right;
-  text-align: center;
-  padding: 1px 9px 3px 6px;
-  margin: 0 6px;
-  text-decoration: none;
-  border-bottom: none;
-}
-#item-style a:hover {
-  color: black;
-  background-color: transparent;
-} */
 /* -------------------------------------------------
                   main content
   --------------------------------------------------*/
@@ -202,71 +124,6 @@ a:hover {
   background-color: transparent;
   text-decoration: none;
 }
-/* #mainContent blockquote,
-#mainContent1 blockquote,
-#mainContent2 blockquote {
-  padding: 0 0 0 15px;
-  margin: 10px 0 10px 15px;
-  width: auto;
-  float: right;
-  border-left: thin dotted #000;
-} */
-
-/* -- types -- */
-table.definition-table {
-  margin: 1em 0 0 0;
-  border: 1px solid #98a0a6;
-}
-.definition-table th {
-  text-align: left;
-  background: #c7cbce;
-  padding-left: 5px;
-}
-.definition-table td {
-  padding: 0 5px 2px 5px;
-  margin: 0;
-  vertical-align: top;
-}
-.definition-table td p {
-  padding: 0 0 0.6em 0;
-  margin: 0;
-}
-.definition-table td ul {
-  padding-top: 0;
-  margin-top: 0;
-}
-.definition-table tr.alt {
-  background: #e9eaeb;
-}
-div.attrib {
-  padding-bottom: 1em;
-}
-
-/* -- hierarchy -- */
-table.h,
-.h tr,
-.h td {
-  border: none;
-  margin: 0;
-  padding: 0;
-  border-collapse: collapse;
-}
-.h .space {
-  width: 20px;
-}
-.h .bar {
-  background-color: #000;
-  width: 1px;
-}
-.h .tc {
-  text-indent: -21px;
-  padding-left: 21px;
-}
-
-table.definition-table {
-  border-spacing: 3px;
-  border-collapse: separate;
-}
 
 /* Footer */
 @media (max-width: 640px) {
@@ -286,4 +143,12 @@ table.definition-table {
     max-width: 960px;
     padding: 0 1em 1em 1em;
   }
+}
+thead {
+  font-size: 18px;
+  color: #0d1f50;
+  white-space: nowrap;
+}
+.table {
+  border-collapse: separate !important;
 }
