Added heading and desc for classes & properties, updated css for search, Added new component for search result

--- a/ui/src/app/classes/classes.component.html
+++ b/ui/src/app/classes/classes.component.html
@@ -1,5 +1,7 @@
 <section id="schema_class_section" class="container">
   <div id="mainContent">
+    <h1>List of Classes</h1>
+    <p>The table here shows the list of classes available with description</p>
     <br />
     <table class="table table-striped">
       <thead>
