--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -55,6 +55,7 @@
         <form class="form-inline my-2 my-lg-0">
           <input
             type="text"
+            name="search"
             placeholder="search schema"
             [formControl]="control"
             [matAutocomplete]="auto"
@@ -68,7 +69,7 @@
           </mat-autocomplete>
           &nbsp;
           <button class="btn my-2 my-sm-0" type="submit">
-            Search
+            search
           </button>
         </form>
       </div>
