--- a/ui/src/app/properties/properties.component.html
+++ b/ui/src/app/properties/properties.component.html
@@ -1,5 +1,9 @@
-<section id="schema_property_section" class="container section">
-  <div id="mainContent1">
+<section id="schema_property_section" class="container">
+  <div id="mainContent">
+    <h1>List of Properties</h1>
+    <p>
+      The table here shows the list of properties available with description
+    </p>
     <br />
     <table class="table table-striped">
       <thead>
