--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -3,6 +3,7 @@
                 General
 --------------------------------------------------*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
 body {
   color: #3a4956;
   background: #fff;
@@ -55,7 +56,7 @@ h4 {
 }
 p {
   margin: 1em 0 0 0 !important;
-  font-size: 18px;
+  font-size: 17px;
 }
 pre {
   font-family: Courier, monospace;
