Updated dataModels,Types and updated css

--- a/ui/src/app/data-models/data-models.component.html
+++ b/ui/src/app/data-models/data-models.component.html
@@ -2,35 +2,32 @@
   <div id="mainContent">
     <p class="para-heading">IUDX Data Models</p>
     <br />
-    <mat-card class="example-card">
+    <mat-card *ngFor="let model of datamodels | async" class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image">
           <i style="color: greenyellow;" class="fab fa-pagelines"></i>
         </div>
-        <mat-card-title>Environment</mat-card-title>
-        <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+        <mat-card-title>{{ model.label }}</mat-card-title>
       </mat-card-header>
       <hr />
 
       <mat-card-content>
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
+          {{ model.comment }}
         </p>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button>More Details</button>
       </mat-card-actions>
     </mat-card>
-    <mat-card class="example-card">
+    <!-- <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image">
           <i style="color: blue;" class="fas fa-city"></i>
         </div>
         <mat-card-title>City Infrastructure</mat-card-title>
-        <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-      </mat-card-header>
+         <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+    <!-- </mat-card-header>
       <hr />
 
       <mat-card-content>
@@ -50,8 +47,8 @@
           <i style="color: green;" class="fas fa-trash"></i>
         </div>
         <mat-card-title>Waste Management</mat-card-title>
-        <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-      </mat-card-header>
+         <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+    <!-- </mat-card-header>
       <hr />
 
       <mat-card-content>
@@ -68,9 +65,9 @@
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-      </mat-card-header>
+        <mat-card-title>Shiba Inu</mat-card-title> -->
+    <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+    <!-- </mat-card-header>
       <hr />
       <mat-card-content>
         <p>
@@ -82,6 +79,6 @@
       <mat-card-actions>
         <button mat-button>More Details</button>
       </mat-card-actions>
-    </mat-card>
+    </mat-card> -->
   </div>
 </section>
