--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -36,12 +36,12 @@
               class="nav-link"
               routerLinkActive="active"
               routerLink="/datamodels"
-              >data-models</a
+              >DataModels</a
             >
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="/entities"
-              >entities</a
+              >Types</a
             >
           </li>
           <!-- <li class="nav-item">
