--- a/ui/src/app/entities/entities.component.html
+++ b/ui/src/app/entities/entities.component.html
@@ -1,97 +1,102 @@
 <section id="category_section" class="container">
   <div id="mainContent">
-    <p class="para-heading">IUDX Entities</p>
-    <p style="text-align: center;">
-      &nbsp; &nbsp; Check out :
-      <a routerLink="/list/classes">Browse All Types</a>&nbsp;
-      <a routerLink="/list/properties">Browse All Properties</a>
-    </p>
+    A Type specifies the data type for a schema. Each
+    <strong style="color:maroon">Type</strong> is associated with a set of
+    properties.<br />
     <br />
+    <h4>Some important Types in IUDX Vocabulary:</h4>
+
+    <h2 class="h-heading">IUDX Entities</h2>
+    <br />
+    <h6 style="margin-top: 0px;">These are the types for catalogue items.</h6>
+
     <div style="align-items: center;">
-      <a style="cursor: pointer;">
+      <ul>
+        <a><li>Resource</li></a>
+        <a><li>Resource Group</li></a>
+        <a><li>ResourceServer</li></a>
+        <a><li>Provider</li></a>
+      </ul>
+
+      <!-- <a style="cursor: pointer;">
         <mat-card class="example-card">
-          <mat-card-header>
+          <mat-card-header class="border-bottom">
             <div mat-card-avatar class="example-header-image">
               <i style="color: greenyellow;" class=""></i>
             </div>
             <mat-card-title>ResourceGroup</mat-card-title>
-            <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
           </mat-card-header>
-          <hr />
           <mat-card-content>
             <p>
               Describes the Resource Group entry in the IUDX catalogue.
             </p>
           </mat-card-content>
-          <mat-card-actions>
-            <button mat-button>Show More</button>
-          </mat-card-actions>
         </mat-card>
       </a>
 
       <a style="cursor: pointer;">
         <mat-card class="example-card">
-          <mat-card-header>
+          <mat-card-header class="border-bottom">
             <div mat-card-avatar class="example-header-image">
               <i style="color: greenyellow;" class=""></i>
             </div>
             <mat-card-title>Resource</mat-card-title>
 
-            <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
           </mat-card-header>
-          <hr />
 
           <mat-card-content>
             <p>
               Describes the Resource entry in the IUDX catalogue.
             </p>
           </mat-card-content>
-          <mat-card-actions>
-            <button mat-button>Show More</button>
-          </mat-card-actions>
+         
         </mat-card>
       </a>
 
       <a style="cursor: pointer;">
         <mat-card class="example-card">
-          <mat-card-header>
+          <mat-card-header class="border-bottom">
             <div mat-card-avatar class="example-header-image">
               <i style="color: blue;" class=""></i>
             </div>
             <mat-card-title>Thing</mat-card-title>
-            <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+            
           </mat-card-header>
-          <hr />
 
           <mat-card-content>
             <p>
               Most generic IUDX object.
             </p>
           </mat-card-content>
-          <mat-card-actions>
-            <button mat-button>Show More</button>
-          </mat-card-actions>
-        </mat-card>
+         
         <mat-card class="example-card">
-          <mat-card-header>
+          <mat-card-header class="border-bottom">
             <div mat-card-avatar class="example-header-image">
               <i style="color: green;" class=""></i>
             </div>
             <mat-card-title>IUDXEntity</mat-card-title>
-            <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+           
           </mat-card-header>
-          <hr />
+      
           <mat-card-content>
             <p>
               Class of all IUDX Entities (Resource, ResourceServer, Provider
               etc.)
             </p>
           </mat-card-content>
-          <mat-card-actions>
-            <button mat-button>Show More</button>
-          </mat-card-actions>
+          
         </mat-card>
-      </a>
+      </a> -->
+      <h4>Value Object types</h4>
+      <p>
+        These are used to describe JSON objects that are values of certain
+        properties.
+      </p>
+      <p style="text-align: center;">
+        &nbsp; &nbsp; Check out :
+        <a routerLink="/list/classes">Browse All Types</a>&nbsp;
+        <a routerLink="/list/properties">Browse All Properties</a>
+      </p>
     </div>
   </div>
 </section>
