Added routerLink  for the list

--- a/ui/src/app/entities/entities.component.html
+++ b/ui/src/app/entities/entities.component.html
@@ -12,10 +12,10 @@
 
     <div style="align-items: center;">
       <ul>
-        <a><li>Resource</li></a>
-        <a><li>Resource Group</li></a>
-        <a><li>ResourceServer</li></a>
-        <a><li>Provider</li></a>
+        <a [routerLink]="['/Resource']"><li>Resource</li></a>
+        <a [routerLink]="['/ResourceGroup']"><li>Resource Group</li></a>
+        <a [routerLink]="['/ResourceServer']"><li>ResourceServer</li></a>
+        <a [routerLink]="['/Provider']"><li>Provider</li></a>
       </ul>
 
       <!-- <a style="cursor: pointer;">
