Added Observable in classes & added async pipe in html

--- a/ui/src/app/classes/classes.component.html
+++ b/ui/src/app/classes/classes.component.html
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let class of classes; index as i">
+        <tr *ngFor="let class of classes | async; index as i">
           <td>
             <a [routerLink]="['/', class.label]"
               ><ngb-highlight [result]="class.label"></ngb-highlight>
