--- a/ui/src/app/footer/footer.component.html
+++ b/ui/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
 <footer id="footer">
-  <p>&copy; 2020 <a href="https://iudx.org.in" target="_blank">IUDX</a></p>
+  <p>
+    &copy; 2020
+    <a href="https://iudx.org.in" rel="noopener" target="_blank">IUDX</a>
+  </p>
 </footer>
