--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -7,6 +7,7 @@
       <img
         style="padding-right:10px;"
         class="img-style"
+        alt="IUDX-Logo"
         src="../../assets/iudx_logo.png"
       />
 
@@ -74,6 +75,7 @@
           <input
             type="text"
             name="search"
+            aria-label="Search"
             placeholder="search schema"
             [formControl]="control"
             [matAutocomplete]="auto"
