--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -13,9 +13,11 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
+  font-display: swap;
 }
 code {
   font-family: Courier, monospace;
+  font-display: swap;
 }
 h1 {
   font: bold 26px Helvetica, Arial, sans-serif !important;
