Updated icon for search

--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -88,8 +88,12 @@
             </mat-option>
           </mat-autocomplete>
           &nbsp;
-          <button class="btn my-2 my-sm-0" type="submit">
-            search
+          <button
+            class="btn my-2 my-sm-0"
+            aria-label="Center Align"
+            type="submit"
+          >
+            <i class="fas fa-search"></i>
           </button>
         </form>
       </div>
