--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,9 +1,6 @@
 <div id="container">
   <div id="intro">
-    <nav
-      id="nav-style"
-      class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"
-    >
+    <nav id="nav-style" class="navbar navbar-expand-md navbar-dark bg-dark">
       <img
         style="padding-right:10px;"
         class="img-style"
@@ -79,6 +76,7 @@
             placeholder="search schema"
             [formControl]="control"
             [matAutocomplete]="auto"
+            autofocus
           />
           <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let res of searchRes | async">
