--- a/ui/src/app/data-models/data-models.component.html
+++ b/ui/src/app/data-models/data-models.component.html
@@ -17,7 +17,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>More Details</button>
+        <button mat-button [routerLink]="['/', model.label]">More Details</button>
       </mat-card-actions>
     </mat-card>
     <!-- <mat-card class="example-card">
